--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
-  "name": "@apeswapfinance/token-lists",
-  "version": "1.0.330",
+  "name": "@ape.swap/token-lists",
+  "version": "1.0.0",
+  "publishConfig": {
+    "access": "public"
+  },
   "description": "",
   "main": "index.js",
   "scripts": {
