--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ape.swap/token-lists",
-  "version": "1.0.15-alpha.1",
+  "version": "1.0.16",
   "publishConfig": {
     "access": "public"
   },
