--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ape.swap/token-lists",
-  "version": "1.0.73",
+  "version": "1.0.73-test.0",
   "publishConfig": {
     "access": "public"
   },
